--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">StudentPortalMobileApplication</string>
-    <string name="title_activity_main">StudentPortalMobileApplication</string>
-    <string name="package_name">io.ionic.starter</string>
-    <string name="custom_url_scheme">io.ionic.starter</string>
+    <string name="app_name">Student Portal</string>
+    <string name="title_activity_main">Student Portal</string>
+    <string name="package_name">io.codeup.studentportal</string>
+    <string name="custom_url_scheme">io.codeup.studentportal</string>
 </resources>
